<resources>
    <string name="app_name">Ashwamedh</string>
    <string name="app_logo">Ashwamedh</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="college_name">College Name</string>
    <string name="event_name">Event Name</string>
    <string name="submit">Submit</string>
    <string name="register_now">Register Now</string>
    <string name="contact_us">Contact Us</string>
    <string name="explore_events">Explore Events</string>
    <string name="welcome_to_ashwamedh_2020">Welcome to Ashwamedh 2020!</string>
    <string name="registration_logo">Registration logo</string>
    <string name="event_image">Event_Image</string>
    <string name="google_maps_key">${MAPS_API_KEY}</string>

</resources>